# Icegrams

./: .gitattributes  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  README.rst  build_wheels.sh  constraints.txt  pyproject.toml  python-package.yml  release.sh  setup.py  test.py  wheels.sh
.github/workflows/: python-package.yml  wheels.yml
doc/: overview.md
old/: build_wheels.sh  release.sh  test.py
src/icegrams/: __init__.py  ngrams.py  trie.cpp  trie.h  trie.py  trie_build.py  utils.py
src/icegrams/resources/: correct.txt  delete.txt  split.txt
test/: test_ngrams.py
utils/: rmh.py
