[project]
name = "icegrams"
version = "1.1.3"
description = "Trigram statistics for Icelandic"
authors = [{ name = "Miðeind ehf.", email = "mideind@mideind.is" }]
maintainers = [{ name = "Miðeind ehf.", email = "mideind@mideind.is" }]
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Natural Language :: Icelandic",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["nlp", "trigram", "ngram", "trigrams", "ngrams", "icelandic"]
requires-python = ">=3.9"
dependencies = ["cffi>=1.15.1", "setuptools", "wheel"]

[project.urls]
Repository = "https://github.com/mideind/Icegrams"

[project.optional-dependencies]
# dev dependencies
dev = ["pytest"]

# *** Configuration of tools ***

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore deprecation warnings in libraries, their problem not ours
    # "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.isort]
# This forces these imports to placed at the top
known_future_library = ["typing"]
profile = "black"
line_length = 88
